fix: tighten list spacing in content areas
Scope list styles to .content to avoid affecting navigation.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -40,6 +40,12 @@ p {
   margin-bottom: 1em;
 }
 
+.content ul, .content ol {
+  margin-bottom: 1em;
+  margin-top: -0.5em;
+  padding-left: 1.5em;
+}
+
 img {
   max-width: 100%;
   height: auto;
